saya merubah css

--- a/halaman.html
+++ b/halaman.html
@@ -1,7 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="index.css" />
+    <style>
+        h1{
+    color: white;
+    background-color: rgb(18, 255, 34);
+    
+}
+.card{
+    background-color: rgb(18, 255, 34);
+    width: 500px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 100px;
+    padding: 10px;
+    border-radius: 10px;
+
+}
+button{
+    margin-left: 205px;
+
+}
+button:hover{
+    background-color:rgb(18, 255, 34);
+    color: white;
+
+}
+input:hover{
+    background-color: silver;
+
+}
+a{
+    text-decoration: none;
+    color:rgb(18, 255, 34);
+}
+a:hover{
+    color: aqua;
+
+}
+p{
+    margin-top: 10px;
+    
+}
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halaman || Login</title>
